Change icon link label transition to absolute to avoid jumping

--- a/src/components/Icons.module.css
+++ b/src/components/Icons.module.css
@@ -25,20 +25,29 @@
 }
 
 .label {
-  display: inline-grid;
-  grid-template-columns: 0fr;
-  transition: grid-template-columns 0.3s 0.5s;
+  height: 100%;
+  position: relative;
   white-space: nowrap;
-}
-
-.link:hover .label {
-  grid-template-columns: 1fr;
-  transition-delay: 0s;
 }
 
 .inner-label {
   font-size: 1rem;
   font-weight: normal;
   overflow: hidden;
-  white-space: pre;
+  pointer-events: none; /* Prevent from triggering hover while collapsed */
+  position: absolute;
+  white-space: pre; /* Prevent preceding space from being collapsed */
+}
+
+.inner-inner-label {
+  background-color: var(--bg);
+  line-height: var(--font-1);
+  pointer-events: all;
+  transform: translateX(-100%);
+  transition: transform 0.3s;
+  z-index: 100;
+}
+
+.link:hover .inner-inner-label {
+  transform: translateX(0);
 }
